Ticking out some items from :todo: list: #Fixing the following -Form labels: associate with fields or remove label tag -Resource page: --Parsers: Move add button to top --Don’t display labels when empty --Delete button right aligned --Delete parser is not working -Nav bar --Rename explore to search --Order: Home, Search, Resources, Streams --Remove nonfunctional search bar -Streams --Get the file display --Display graphs on folder listing

--- a/proposed/public/stylesheets/mystyles.css
+++ b/proposed/public/stylesheets/mystyles.css
@@ -131,6 +131,8 @@ dd {
 }
 .hidden {
 		display:none;
+		width: 0px; 
+		height: 0px;
 }
 
 
